# PyReshaper

./: .gitignore  .pre-commit-config.yaml  .project  .pydevproject  CHANGELOG.rst  CHANGES.md  CHANGES.rst  CHANGES.txt  Doxyfile  INSTALL  LICENSE.txt  README  README.md  README.rst  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml  env-2.7.yml  environment-2.7.yml  install.sh  lint.sh  test.sh
.github/workflows/: linting.yml  pypipublish.yml  tests.yml
ci/: environment.yml  runtests.sh
docs/: .buildinfo  UserManual.rst  changelog.html  doxy_filter.sh  genindex.html  index.html  iobackend.html  license.html  manual.html  objects.inv  py-modindex.html  pyreshaper.html  readme.html  reshaper.html  search.html  searchindex.js  specification.html
docs/.doctrees/: changelog.doctree  environment.pickle  index.doctree  iobackend.doctree  license.doctree  manual.doctree  pyreshaper.doctree  readme.doctree  reshaper.doctree  specification.doctree
docs/api/: doxy_filter.sh
docs/backup/: UserManual.rst  index.rst  manual.rst  modules.rst  pyreshaper.rst
docs/source/: conf.py  index.rst  manual.rst  reshaper.rst  (+1 more)
pyreshaper/: __init__.py  cftime.py  iobackend.py  messenger.py  paralleltools.py  reshaper.py  specification.py  timekeeper.py
scripts/: s2smake  s2srun  slice2series
source/: .gitignore
tests/: cftimeTests.py  checks.py  decompTests.py  mkTestData.py  reshaperTests.py  specTests.py  test_cli_parallel.py  test_iobackend.py  test_parallel.py  test_reshaper.py  test_s2smake.py  test_s2srun.py  test_specification.py
(+83 files in other folders)
