[metadata]
description-file = README.rst

[flake8]
ignore = E265,E501,E722
exclude =
    .git,
    __pycache__,
    docs,
    build,
    dist,
    tests,
    ./source/pyreshaper/__init__.py
max-complexity = 40

[tool:pytest]
testpaths = ./source/test
python_files = '*Tests.py'
python_classes = '*Tests'
